<resources>
    <string name="app_name">联创座位系统</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Manuel Nathaniel</string>
    <string name="nav_header_subtitle">厚德 博学 载物</string>
    <string name="nav_header_person_sign">天行健，君子以自强不息；地势坤，君子以厚德载物。</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_nickname">昵称:</string>
    <string name="nav_motto">箴言:</string>
    <string name="nav_per_sign">签名:</string>

    <string name="action_login">激活</string>
    <string name="action_settings">设置</string>
    <string name="action_battery">电池</string>
    <string name="action_overdisplay">悬浮显示</string>
    <string name="action_help">帮助</string>
    <string name="action_feedbakce">反馈</string>

    <string name="menu_home">个人中心</string>
    <string name="menu_myresv">我的预约</string>
    <string name="menu_gallery">定时任务</string>
    <string name="menu_slideshow">重新预约</string>
    <string name="menu_tools">快速抢座</string>
    <string name="menu_share">座位查询</string>
    <string name="menu_transfer">座位转移</string>
    <string name="menu_send">应用详情</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="title_activity_mini_qb">MiniQBActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="tag"> (X5内核功能演示)</string>
    <string name="tip">普通接入直接参考“APPApplication” “BrowserActivity” “X5WebView”中相关实现即可</string>

    <string name="home_copyright"><![CDATA[Copyright © 2009–2019 K. & N. All Rights Reserved]]></string>

    <string-array name="index_titles">
        <item>浏览器demo</item>
        <item>全屏播放</item>
        <item>文件选择器</item>
    </string-array>

    <string name="ts1">%1$s：%2$s —— %3$s</string>
    <string name="ts2">%1$s：%2$s —— %3$s</string>
    <string name="ts3">%1$s：%2$s —— %3$s</string>
    <string name="progresstips">%1$s  当前积分:%2$s</string>

    <string name="transfer_source_tips">座位原所有者的学号和密码</string>
    <string name="transfer_target_tips">座位接收有者的学号和密码</string>
    <string name="transfer_source_id">用户名</string>
    <string name="transfer_source_pwd">密码</string>
    <string name="transfer_target_id">用户名</string>
    <string name="transfer_target_pwd">密码</string>

    <string name="grab_tishi">输入完整的信息后点击图标即可运行</string>
    <string name="grab_tips1">Tips: 姓名/用户名/密码/阅览室/开始时间为必填信息</string>
    <string name="grab_tips2">Tips: 首选座位为空时，候选座位无效，强烈建议您指定首选座位，以便检索其临近座位，否则将在预约过程中随机选择</string>
    <string name="grab_tips3">Tips：从当前时间算起,以分钟为单位,默认为40,即开始时间设定为40分钟后，可大于60</string>
    <string name="grab_tips4">Tips：系统规则限制，预约时长应大于1小时小于15小时,默认结束时间22:30</string>
    <string name="grab_action">点击预约图标即可开始，点击退出图标则停止后台监控服务</string>

    <string name="timing_tishi">请输入完整的信息后点击保存</string>
    <string name="timing_tips1">Tips:姓名/用户名/密码/阅览室/时间段为必填信息</string>
    <string name="timing_tipsend">强烈建议您指定首选座位，并将时长设置在15小时以内，例如7:40–22:25</string>


    <string name="home_tips1">Tip:点击刷新将为您取消并重新预约当前座位，如果时间输入错误，将自动更新为当前时间20分钟后</string>
    <string name="timing_float">当用户信息完整且完成注册时，定时任务默认启动</string>
    <string name="leave_Tips">请您务必确认您设定的开始时间距您原始结束时间大于1小时，否则，系统将不应答该请求</string>
    <string name="option_tips">为了您的正常使用，请您务必完成所有授权!</string>
    <string name="option_tips2">开启忽略电池优化使用，该应用将被加入白名单，对于6.0以上系统，这是必须的；否则将影响定时任务的使用。</string>

    <string-array name="roomname">
        <item></item>
        <item>一阅</item>
        <item>二阅</item>
        <item>三阅</item>
        <item>四阅</item>
        <item>五阅</item>
        <item>树华A</item>
    </string-array>
    <string name="question">有问题？点我</string>

    <string name="function_name1_tips"><Data><![CDATA[
        该功能将允许您对菜单栏进行个性化设置，如：对昵称、Motto和签名进行更改，再次进入时会生效，如选择默认，则使用默认设置。</br>
    ]]></Data></string>


    <string name="title_activity_scrolling">服务与帮助</string>
    <string name="large_text"><Data><![CDATA[

        <p>为了给您带来更好的服务和体验，请仔细阅读本条例的相关内容，如有任何疑问可点击反馈按钮，以便
        我们可以进一步优化.</p>

        <p><b><font color="#000000">1.权限</font></b></p>

        <p>为了您能更好的使用该软件的全部功能，部分权限需要您手动开启。</p>
        <p><b>1.1 权限内容</b></p>
        <p>悬浮窗、通知栏、开机自启动、后台启动/运行、锁屏通知/显示、获取手机信息、后台弹出界面、可显示在其他应用上方等。</p>
        <p><b>1.2 设置方法</b></p>
        <p>不同机型设置方法不同，具体可前往手机设置中心->更多设置/授权管理；您也可通过点击设置/关于按钮前往手机设置中心和APP详情页面。</p>
        <p><b>1.3 使用技巧</b></p>
        <p>所有点击悬浮按钮产生的tips都可侧滑删除；部分通知会在屏幕上方悬浮短暂时间后自动消失，该类型通知属于及时提醒；部分通知悬停短暂时间后收回通知栏，此时您可下拉查看；
        还有部分悬挂通知，此类通知属于重要通知，只有当您侧滑删除它才会消失，否则，将一直悬挂。</p>
        <p>以上属于可删除通知，另外还有一种常驻状态栏/通知栏的通知，该类型通知表示有进程正在运行，
        您不可手动删除，除非您强制退出该应用，如通知栏显示“桥接服务”正在运行，因该服务属于核心服务，您必须进入“定时任务”页面，将其置于关闭状态，否则，它仍可重新启动。</p>
        <p>您在退出程序之前，务必将定时任务页面的开关置于关闭状态，否则将在下一个时间节点自动启动。</p>

        <p><b>1.4 重要提醒</b></p>
        <p><font color="#008990">在使用该软件所提供功能的同时，您务必清楚以下内容。</font></p>
        <p>预约座位系统限制，预约时长最小值为60，最大值为900，单位为分钟；且22:00之后无法访问服务器。</p>
        <p>Android 6.0及以上系统务必授权本应用可在其他应用上方显示，该功能主要推送必须由您了解或授权的系统级通知，所以您务必开启。</p>
        <p>Android 8.0系统务必手动授权本应用的通知权限，否则，您将在使用过程中无法收到提示信息。</p>
        <p>对于Android 6.0及以上系统，定时任务将不准确。原因在于新版本系统对低电耗模式和应用待机模式进行了针对性优化，我们暂未对此提供解决方案，但为保证您的体验，我们为首选座位增加了候选座位选项，
        以保障您的利益。</p>
        <p><font color="#008990">低电耗模式：</font>如果用户设备未插接电源、处于静止状态一段时间且屏幕关闭，设备会进入低电耗模式。 在低电耗模式下，系统会尝试通过限制应用对网络和 CPU 密集型服务的
        访问来节省电量。 这还可以<font color="88A8F1">阻止应用访问网络并推迟其作业、同步和标准闹铃。</font></p>
        <p><font color="#008990">应用待机模式：</font>应用待机模式允许系统判定应用在用户未主动使用它时处于空闲状态。 当用户有一段时间未触摸应用时，系统便会作出此判定。
        当用户将设备插入电源时，系统将从待机状态释放应用，从而让它们可以自由访问网络并执行任何待定作业和同步。 如果设备长时间处于空闲状态，系统将按每天大约一次的频率允许空闲应用访问网络。</p>
        <p>为了能让该应用为您提供长期的服务，您务必在<font color="#008990">电池管理/耗电管理</font>中允许其在后台高耗电的情况
        下运行；同时，您务必在通知栏等设置中允许其锁屏显示。部分安卓8.0的系统可在应用详情页中对应用的权限和服务进行统一管理。</p>

        <p><b><font color="#000000">2.功能与服务</font></b></p>

        <p>本软件共提供四项服务：分别是个人中心、我的预约、预约查询、定时任务、重新预约、快速抢座。下面将对这些功能的使用进行介绍：</p>

        <p><b>2.1 声明</b></p>

        <p><font color="#008990">由于网络和服务器等原因，可能会造成部分情况下无法访问网络，因此造成的预约失败，本软件不予负责。</font></p>

        <p>为了降低这种非软件原因错误造成的不良结果，我们在定时任务服务中增加了强行唤醒用户的功能，如果在当前清晨系统开放前，即06:29，如果软件还无法成功访问服务器，则会强制振动，提醒
        用户及时查看原因，调整手可再次手动重启定时任务页面的开关。另外，如果在能够正常访问服务器的情况下，6:40还未能成功预约，则同样会唤醒用户及时查看。</p>

        <p><b>2.2 个人中心</b></p>

        <p>该功能将允许您对菜单栏进行个性化设置，如：对昵称、Motto和签名进行更改，再次进入时会生效，如选择默认，则使用默认设置。</p>


        <p><b>2.3 我的预约</b></p>

        <p>该功能需要您输入用户名和密码登录官方网页进行查询，为您确认预约座位提供方便。您若需要查询预约信息，可点击“我的预约”进入官网查询即可，首次打开时，如果您所使用的设备没有所需浏览器内核，将自动加载浏览器内核，会需要一定流量，约为30M，您可选择WIFI环境进行下载
        。</p>
        <p>点击“我的预约”页面右下角的关闭按钮将直接退出，该功能会在后台为您保留一定时间，以便您下次可以快速进入该页面。点击返回键，则该功能中的所有页面后退出，再次进入时将重新加载。</p>

        <p><b>2.4 定时任务</b></p>
        <p>该功能包含桥接服务、守护服务、定时任务等项目，需要您完成注册的同时保证必要信息的完整性，否则，该功能不会被启用。</p>

        <p>默认情况下，如果您授予了该软件<font color="#008990">自启动和后台运行</font>等权限，
        并且为您所使用的设备设置了定时开关机任务（开机时间必须在清晨6:15之前），此时若您提供了完整的信息，桥接服务会自动启动，随机准备开启守护服务，并在预约系统时执行定时任务，在为您预约成
        功后，系统会自动停止守护服务，而桥接服务在您未手动关闭的情况下，会24小时运行。</p>



        <p><font color="#008990">注意：您可为您的设备设置定时开关机以便于该应用可以自启动（您已授权其开机自启动），由于部分机型在开机时强制输入开机密码，否则在开机未解锁的情况下应用将无法启动。
        这时，您可前往定时任务页面手动开启桥接服务，并保持手机为开机状态；</p>
        <p>考虑到耗电方面，您也可在不需要的时候随时将其关闭。该功能的执行时间为6:15—6:40，在此时间内，无论是提前手动开始，还是通过设定定时开关机
        的方式，您务必要保证该功能的服务处于开启状态，否则，会造成预约失败。</font></p>



        <p><b>2.5 重新预约</b></p><p>该功能为您释放并重新预约当前座位，默认结束时间为22:30，如您原始座位的预约时
        间早于该时间，请您务必注意时间的设置，以免造成释放座位后未能重新预约。</p>

        <p><b>2.6 快速抢座</b></p><p>该功能可以在您设置完整的信息情况下，为您预约当前预览时的空闲座位（如果当前阅览室有空闲座位）。强烈建议您指定首选座位，如果您所指定的座位已经被预约，则系统会优先检索您
        指定座位的临近位置；如果您没有指定首选座位，系统进行提示，如果您依旧没有指定首选座位，则系统会随机指定座位，在非空闲的时候，会优先检索其临近座位。</p>


        <p>此外，该功能中提供后台监控服务，如果当前阅览室在当前时间内没有空闲座位，系统会在征得您的同意后为您提供后台监控服务，持续时长
        为15分钟，因该过程可能会消耗部分运营商浏览，您有权拒绝，也可随时中断后台监控服务。建议您在最优的情况下，先行更换阅览室；若必须选当前阅览室，可启动后台监控服务。</p>

        <p><b>2.7 座位查询</b></p>
        <p>您可使用该功能查看指定座位的预约情况，每次查询需要消耗约为500KB流量。</p>

        <p><b>2.8 座位转移</b></p>
        <p>您可使用该功能将一个账号上预约的座位一键转移至另一个账号，但您需要保证原有座位的剩余使用时间需要大于70分钟，否则无法转移。</p>

        <p><b><font color="#000000">3.使用定时任务的几种方案</font></b></p>

        <p>针对Android 6.0及以上系统，闹钟使用和耗电管理得到优化，部分应用可能会无法使用闹钟，这将导致定时任务无法执行或执行不准确，对此，我们目前提供几种解决方案。</p>

        <p><font color="#008990">推荐：(1)接通电源；(2)使用WIFI网络</font></p>

        <p><b>3.1 方案一</b></p>
        <p>开机自启动方案。该方案耗电量最低，但某些厂商的部分机型可能在重启后需要输入密码才能启动应用，所以需要您先行测试。需要您将相关页面信息填写完整，为保证您的体验，我们为您增添了“候选座位”选项，
        该选项只有在指定了首选座位的情况下才会生效。通过授权该应用开机自启动和后台运行等权限，并设置“定时开关机”，关机时间您可随意设置，但开机时间建议设定在06:15-06:20之间，完成上述操作即可。</p>

        <p><b>3.2 方案二</b></p>
        <p>长期后台运行方案。该方案耗电量最高，如使用该方案，建议您能接通电源，切勿关闭手机。首先，您应保证页面信息的完整性，然后您需授权该应用后台运行、自启动（包括开机自启动和后台自启动）权限，
        在睡前即可开启定时任务页面开关，服务将在夜间开始运行，直至您手动关闭，否则将一直运行。</p>

        <p><b>3.2 方案三</b></p>
        <p>后台运行+闹钟唤醒。该方案是在方案二的基础上，增设一个06:25-06:28之间任意时间的系统闹钟（不振动、不响铃），以此唤醒处于休眠状态的手机系统，进入短暂的工作状态，此时应用中的闹钟将获得短暂
        且为ms量级的定时精度，从而获得更为准确的监控。</p>



        <p><b><font color="#000000">4.常见问题及解决方法</font></b></p>

        <p><font color="#008990">一般情况下，上述功能均可正常使用。如在使用过程中出现任何问题，您可参考本小节内容或联系我们。</font></p>

        <p><b>4.1 设置开机自启动</b></p>

        <p>在安装本软件后，(1): 您务必前往<font color="#008990">设置中心/应用详情页</font>，按照前述提示开启相关权限，包括开机自启动（后台启动）、悬浮窗、耗电管理等；</p>
        <p>(2): 您应将所有页面必要的信息填写完整然后保存，以避免重启时，应用检测到您的信息为空，自动停止服务。</p>
        <p>(3): 您应手动重启手机，在开机后的1-2分钟内请勿解锁,以验证您的设备是否可以在未解锁的情况下启动该应用。</p>
        <p>(4): 正常情况下，该应用如果得到您的开机自启动授权，将在设备自启动后的1-2分钟内启动桥接服务，并在通知栏出现“小飞机”样式的图标（关闭定时任务后自动消失），同
        时还会弹出“Boot Completed”字样(显示时长约为3s)。</p>

        <p><b>4.2 自启动常见问题</b></p>
        <p>(1): 通知栏和悬浮窗权限：在开机未解锁的1-2分钟您未看到任何提示,则请您解锁前往手机设置中查看“正在运行的进程和服务”中查看是否有“好帮手”正在运行，如果存在该进程，则请
        您前往检查通知栏和悬浮窗等权限。</p>


        <p>(2): 定时任务信息不完整：如您的设备在自启动后通知栏出现图标一闪而过的情况，则可能是您的定时任务信息不完整。此时应先前往“正在运行的进程和服务”查看是否存在该应用的进程，
        如果没有该应用的进程，请您启动该应用，前往定时任务页面（此时您的页面应是填写完整的，该页面保存的是您上次填写的信息，如果该页面信息为空，您需要填写完整后再次重启进行测试）,开启开关，
        如果此时在通知栏出现了“小飞机”图样,则表明桥接服务已经启动成功。</p>


        <p>(3): 如果您的情况不是以上任意一种，则在一定程度上表明您无法使用通过开机自启动方法来使用定时任务。您可通过手动开启的方法，继续使用该功能。具体操作如下：保证在必要信息完整性，
        在您需要启动的时候(为降低增加电池的续航，建议睡前开启)点击定时任务页面的开关，该功能即可开启，直到您下一次手动关闭，否则，24小时监控运行。</p>

        <p><b>4.3 锁屏后服务被关闭</b></p>
        <p>如您手动开启定时任务页面开关，锁屏一定时间后，状态栏“小飞机”图标消失，该情况是由于系统在锁屏后下进入Doze模式，为降低功耗，会关闭一些进程。您可前往设置，在耗电排行/电池管理中允许
        其在高耗电情况下运行，并检查您是否开启后台运行权限。</p>

        <p><b>4.4 首次进入“我的预约”出现卡顿</b></p>
        <p>部分机型可能出现此问题，该问题的出现可能是由于系统版本问题或首次运行需要加载插件造成，正在优化中，暂不影响使用。</p>

        <p><b>4.5 “定时任务”页面关闭服务时闪退</b></p>
        <p>由于兼容性问题，文字滚动显示功能会在关闭服务时异常而导致运行崩溃。部分机型未经测试，正在优化中，暂不影响使用。</p>

        <p><b>4.6 “定时任务”预约延迟</b></p>
        <p><font color="#008990">您务必要注意该情况的发生，如预约结果给出的预约成功时间和服务器开放时间(6:30:00)差值在5s甚至更高，或者在多次使用后未能预约到您的指定座位，说明您的系统在电池续航方面
        进行了改进，除一些必要的系统应用和第三方应用外，无法通过白名单/耗电管理来授权，这将导致定时任务出现误差/延迟。您可尝试在夜间接通电源、使用WIFI网络，最终解决方案为：在夜间保持不锁屏/屏幕常亮，
        以此来保证应用不被处于休眠状态。</font></p>

        <p><b>4.7 完成授权后弹窗无法关闭</b></p>
        <p>遇到此问题，您可关闭该应用，然后重新打开即可。</p>

        <p><b>4.8 授权到期后应用无法打开，总是闪退</b></p>
        <p>该情况属于正常退出，软件到期前不会出现该情况，请放心使用。</p>

        <p><b>4.8 点击按钮无响应</b></p>
        <p>当点击某些按钮无响应，诸如激活页面的“申请”按钮等，此时您需要点击右上角“悬浮显示”允许该应用该其他应用上方显示即可。</p>

        <p><b><font color="#000000">5.隐私</font></b></p>

        <p>本软件仅读取您设备的身份和状态等信息，以便进行软件注册。除此之外，我们不会读取和上传您的任
        何隐私信息，请您放心使用！如有任何疑问，请联系</p>

        <p>Copyright © 2009-2019 N.K. All Rights Reserved</p>
    ]]></Data></string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
