<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_login"
        android:orderInCategory="10"
        android:icon="@drawable/loginicon128"
        android:title="@string/action_login"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:icon="@drawable/settingiconbarnew"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/battery"
        android:orderInCategory="40"
        android:icon="@drawable/battery"
        android:title="@string/action_battery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/act_overDisplay"
        android:orderInCategory="45"
        android:icon="@drawable/overdisplay"
        android:title="@string/action_overdisplay"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="50"
        android:icon="@drawable/helpbaricon"
        android:title="@string/action_help"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_feedback"
        android:orderInCategory="70"
        android:icon="@drawable/feedbackiconnew"
        android:title="@string/action_feedbakce"
        app:showAsAction="ifRoom"/>

</menu>
